# draftcode

./: .dockerignore  .env.example  .gitignore  Dockerfile.gateway  Dockerfile.lambda  Makefile  README.md  design.md  pyproject.toml  requirements-full.txt  requirements.txt  spec.md  上传此文件即可（选秀+里程碑问题选手答题卡_模板）.xlsx
local_nbadraft_workspace/: .dockerignore  .gitignore  Dockerfile  EVA_Matrix_故障字标融合试验.html  PROJECT_HANDOFF.md  README.md  alembic.ini  build_font.py  build_fonts.py  docker-compose.yml  index.backup-8slide.html  index.before-green-eva-redesign.html  index.html  index.src.html  pyproject.toml  绿黑黑客松视觉效果试衣间.html  绿黑黑客松视觉模板候选.md  选秀作战室_DraftWarRoom_实现文档·终版v3(1).md  选秀作战室_PPT大纲.md  选秀作战室_全动效花哨版.html  选秀作战室_架构图.html  选秀作战室_架构图.src.html  选秀作战室_架构图_循环版.html  选秀作战室_架构图_静态版.html  选秀作战室_绿黑EVA路演.html  黑客松路演PPT_design点.md
local_nbadraft_workspace/alembic/: env.py
local_nbadraft_workspace/alembic/versions/: 0001_initial.py
local_nbadraft_workspace/app/: config.py  db.py  etl.py  main.py  milestones.py  models.py  schemas.py  snapshot.py
local_nbadraft_workspace/research/: 2016_pre_june_first_round_redraft.csv  2016_pre_june_first_round_redraft.md
local_nbadraft_workspace/tests/: test_milestones.py
local_nbadraft_workspace/设计元素/: README_先看.md  资产总览.md
local_nbadraft_workspace/设计元素/01_设计规范/: 01_轻量设计简报.md  02_视觉世界与反模板.md  03_色彩字体材质.md  04_首屏封面.md  05_版式密度.md
local_nbadraft_workspace/设计元素/02_视觉元素/: 01_暗色发光展示系统.md  02_玻璃控制台系统.md  03_章节冲击页.md  04_命题强调块.md  05_流程路线.md  06_竞品图卡.md  07_视频展示容器.md  08_交互原型嵌入.md
local_nbadraft_workspace/设计元素/03_动效资产/: 01_连续物体转场_FLIP.md  02_内容级联入场.md  03_滚动触发入场.md  04_章节炸场_弹出白闪震颤.md  06_三维情绪球.md  (+15 more)
(+86 files in other folders)
