[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "draftcode"
version = "0.1.0"
description = "NBA draft prediction agent for AWS DraftCode hackathon."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
app = [
  "fastapi>=0.111",
  "pandas>=2.2",
  "streamlit>=1.36",
  "uvicorn>=0.30",
]
aws = [
  "boto3>=1.34",
  "pydantic>=2.7",
]
dev = [
  "pytest>=8.2",
]
quality = [
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
draftcode = "draftcode.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
